Revert "Merge release 22.02 master 9 feb (#21682)" (#21690)
This reverts commit b1379aba97e56f3d2cef5973891ff482883354be.